# behavior-driven-development-test

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Claude.md  DEEP_FEATURE_REVIEW.md  FEATURE_EVALUATION_REPORT.md  FEATURE_FILE_REVIEW.md  LICENSE  README.md  SCENARIO_OUTLINE_CHANGES.md  STALE_INFORMATION_REPORT.md  behave.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: API_IMPROVEMENTS.md  CLEANUP_BACKWARDS_COMPAT.md  DDD_REFACTORING_PLAN.md  NEXT_STEPS.md  ROADMAP.md  SPRINTS.md  WIP.md
features/: PERSONAS.md  README.md  basic_operations.feature  collaborative.feature  communication.feature  configuration.feature  cycle_detection.feature  environment.py  expansion.feature  governance.feature  knowledge.feature  llm.feature  merge_and_prune.feature  metrics.feature  metrics_collector.feature  observability.feature  orchestrator.feature  persistence.feature  questions.feature  resource_limits.feature  resources.feature  search.feature  search_strategies.feature  serialization.feature  services.feature  tracing.feature  traversal.feature  verification.feature  visualization.feature
features/ai_reasoning/: intelligent_search.feature  llm_integration.feature  thought_exploration.feature
graph_of_thought/: __init__.py  collaborative.py  graph.py  tests.py
graph_of_thought_v2/: APPLIED_DESIGN.md  CODE_REVIEW.md  DESIGN_PHILOSOPHY.md  README.md  __init__.py
scripts/: README.md  check_architecture.py  setup-dev.sh
tests/: test_architecture.py  test_backwards_compatibility.py  test_domain_enums.py  test_domain_models.py  test_import_hierarchy.py
(+100 files in other folders)
